--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -6,8 +6,12 @@ spring:
     password: password
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
-  h2:
-    console.enabled: true
+    hibernate.ddl-auto: create
+    defer-datasource-initialization: true
 
 server:
   servlet.context-path: /rohlik
+
+rohlik:
+  order:
+    expiry_seconds: 1800
